dev/search/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: yas-dev
  labels:
    app: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: ghcr.io/nashtech-garage/yas-search:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
