dev/search/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: yas-dev
  labels:
    app: search
spec:
  type: ClusterIP
  selector:
    app: search
  ports:
  - port: 80
    targetPort: 80
